syntax = "proto3";

package coolercontrol.device_service.v1;

message ResetChannelRequest {
  string device_id = 1;
  string channel_id = 2;
}

message ResetChannelResponse {}
