syntax = "proto3";

package coolercontrol.device_service.v1;

message ShutdownRequest {}

message ShutdownResponse {}
